--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,10 @@
         width: 72%;
         margin: 1rem 0;
       }
+      b {
+        font-size: 1.6rem;
+        margin-bottom: 1.5rem;
+      }
     </style>
     <title>React Portfolio App</title>
   </head>
